# rapidshyp_seller_api-main

./: Cargo.toml  README.md  local.json
src/: applications.rs  compute.rs  config.rs  main.rs  models.rs  queries.rs  request_validations.rs  utils.rs  web_server.rs
src/applications/: connectEtcd.rs  store.rs
src/config/: configuration.rs
src/models/: google_callback.rs  responses.rs  sellers.rs  sessions.rs  state.rs
src/models/sellers/: bank_details.rs  early_cod.rs  seller_details.rs
src/queries/: auth.rs  create_cassandra_tables.rs  database_connection.rs  sellers.rs
src/queries/auth/: get_user_data.rs  user_auth.rs
src/queries/sellers/: bank.rs  early_cod.rs  seller_data.rs  state.rs
src/request_validations/: auth.rs  bank.rs
src/request_validations/auth/: generale_signup.rs  validate_general_signin.rs
src/request_validations/bank/: bank_validation.rs
src/utils/: google_basic_client.rs  loggers.rs  messages.rs
src/web_server/: create_connections.rs  routes.rs
src/web_server/routes/: auth.rs  sellers.rs  test_fetch.rs
src/web_server/routes/auth/: general_signin.rs  general_signup.rs  google_auth_response.rs  google_login.rs
src/web_server/routes/sellers/: bank_details.rs  early_cod.rs  get_profile.rs  state.rs
