[package]
name = "seller_apis"
version = "0.1.0"
edition = "2021"

RUSTFLAGS="-Ctarget-cpu=sandybridge -Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"

[profile.dev.package."*"] # +
opt-level = 0

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
bytebuffer = "2.1.1"
clap = { version = "4.1.4", features = ["derive"] }
etcd-client = "0.12.0"
tokio = { version = "1.6.0", features = ["full"] }
tokio-stream = "0.1.11"
juniper = "0.15.10"
actix-web-lab = "0.19.1"
actix-cors = "0.6.4"

actix-web = "4.3.0"
zip = "0.6"
actix = "0.13.0"
actix-web-actors = "4.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde-xml-rs = "0.6.0"
awc = "3.0.0"

lazy_static = "1.4.0"
pnet = "0.34.0"
hyper = "0.14.20"
prost = "0.12.1"
sled={version="0.34.7"}
crossbeam-channel = "0.5.6"
dashmap = "5.4.0"
hyper-tls = "0.5.0"
image = "0.24.5"
chrono = "0.4.23"
time = "0.3.17"
regex = "1.7.1"
simple-xml-builder = "1.1.0"
concurrent-queue = "2.1.0"
rust_decimal = "1.28.1"
int-enum = "0.5.0"
#rocksdb = "0.21.0"
cdrs = { version = "2" }
oauth2 = "4.4.2"
reqwest = "0.11.22"
yup-oauth2 = "8.3.0"
mongodb = "2.7.0"
jsonwebtoken = "8.3.0"
sha2 = "0.10.8"
protoc = "2.28.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# tokio + rustls
#sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mssql" ] }

[dependencies.tokio-util]
version = "0.7.4"
features=["compat"]
